cmake_minimum_required(VERSION 3.0)

# v2.0 Tools

# Multi-purpose domain randomization plugin
add_subdirectory(domain_randomization)

# v1.0 Tools 

# Camera tools plugin
add_subdirectory(camera_utils)
# Visual tools plugin
add_subdirectory(visual_utils)
# World tools plugin
add_subdirectory(world_utils)
